--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -11,7 +11,9 @@
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
     "@types/uuid": "^9.0.1",
+    "deep-equal": "^2.2.0",
     "typescript": "^4.9.5",
     "vitest": "^0.29.3"
   },
