--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@annotorious/core",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-pre-alpha-01",
   "description": "Experimental rewrite of Annotorious",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
+    "build": "echo 'Skipping build in @annotorious/core package'",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
