--- a/packages/annotorious-openseadragon/package.json
+++ b/packages/annotorious-openseadragon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@annotorious/openseadragon",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-pre-alpha-01",
   "description": "Experimental rewrite of Annotorious OpenSeadragon",
   "type": "module",
   "main": "./dist/annotorious-openseadragon.js",
