--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/uuid": "^9.0.1",
+    "svelte": "^3.56.0",
     "typescript": "^4.9.5",
     "vitest": "^0.29.3"
   },
