--- a/packages/annotorious-core/tsconfig.json
+++ b/packages/annotorious-core/tsconfig.json
@@ -6,9 +6,7 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "importsNotUsedAsValues": "error",
     "incremental": false,
-    "isolatedModules": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "outDir": "./dist",
@@ -16,7 +14,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": false,
     "sourceMap": true,
-    "target": "ESNext"
+    "target": "ESNext",
+    "verbatimModuleSyntax": true
   },
   "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["node_modules", "dist"]
