--- a/packages/annotorious-openseadragon/package.json
+++ b/packages/annotorious-openseadragon/package.json
@@ -3,7 +3,8 @@
   "version": "3.0.0-pre-alpha-04",
   "description": "Experimental rewrite of Annotorious OpenSeadragon",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "./dist/annotorious-openseadragon.js",
+  "types": "./dist/annotorious-openseadragon.d.ts",
   "scripts": {
     "start": "vite",
     "build": "vite build",
