--- a/packages/annotorious-supabase/tsconfig.json
+++ b/packages/annotorious-supabase/tsconfig.json
@@ -6,6 +6,7 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "ignoreDeprecations": "5.0",
     "importsNotUsedAsValues": "error",
     "incremental": false,
     "isolatedModules": true,
