--- a/packages/annotorious-core/tsconfig.json
+++ b/packages/annotorious-core/tsconfig.json
@@ -6,7 +6,10 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "ignoreDeprecations": "5.0",
+    "importsNotUsedAsValues": "error",
     "incremental": false,
+    "isolatedModules": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "outDir": "./dist",
