--- a/packages/annotorious-openseadragon/tsconfig.json
+++ b/packages/annotorious-openseadragon/tsconfig.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "importsNotUsedAsValues": "error",
     "incremental": false,
     "isolatedModules": true,
     "module": "ESNext",
