--- a/packages/annotorious-supabase/package.json
+++ b/packages/annotorious-supabase/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@annotorious/supabase",
-  "version": "3.0.0-pre-alpha-04",
+  "version": "3.0.0-pre-alpha-05",
   "description": "Experimental rewrite of Annotorious",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/annotorious-supabase.js",
   "scripts": {
     "start": "vite --host",
     "build": "vite build",
