--- a/packages/annotorious-supabase/package.json
+++ b/packages/annotorious-supabase/package.json
@@ -13,6 +13,7 @@
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.1",
     "vite-plugin-dts": "^2.2.0"
@@ -20,6 +21,7 @@
   "dependencies": {
     "@supabase/realtime-js": "^2.7.1",
     "@supabase/supabase-js": "^2.12.1",
+    "deep-equal": "^2.2.0",
     "nanoevents": "^7.0.1"
   }
 }
