--- a/packages/annotorious-react/package.json
+++ b/packages/annotorious-react/package.json
@@ -2,24 +2,40 @@
   "name": "@annotorious/react",
   "version": "3.0.0-pre-alpha-06",
   "description": "Experimental rewrite of Annotorious",
-  "type": "module",
-  "main": "src/index.ts",
-  "scripts": {
-    "start": "vite",
-    "build": "echo 'Skipping build in @annotorious/react package'",
-    "test": "echo 'Skipping tests in @annotorious/react package'"
-  },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
+  "type": "module",
+  "scripts": {
+    "start": "vite",
+    "build": "tsc && vite build",
+    "test": "echo 'Skipping tests in @annotorious/react package'"
+  },
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/annotorious-react.es.js",
+      "require": "./dist/annotorious-react.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
+  "main": "./dist/annotorious-react.umd.js",
+  "module": "./dist/annotorious-react.es.js",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.7.4",
-    "vite": "^4.2.1"
+    "vite": "^4.2.1",
+    "vite-plugin-dts": "^2.3.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "peerDependencies": {
     "openseadragon": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "16.8.0 || >=17.x",
+    "react-dom": "16.8.0 || >=17.x"
   }
 }
