--- a/packages/annotorious-supabase/package.json
+++ b/packages/annotorious-supabase/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.20.0",
-    "nanoevents": "^7.0.1",
-    "nanoid": "^4.0.2"
+    "nanoevents": "^7.0.1"
   }
 }
