--- a/packages/annotorious-react/package.json
+++ b/packages/annotorious-react/package.json
@@ -22,7 +22,7 @@
   },
   "main": "./dist/annotorious-react.umd.js",
   "module": "./dist/annotorious-react.es.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/packages/annotorious-react/src/index.d.ts",
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
