--- a/packages/annotorious-openseadragon/package.json
+++ b/packages/annotorious-openseadragon/package.json
@@ -34,6 +34,7 @@
     "vite-plugin-dts": "^2.2.0"
   },
   "dependencies": {
+    "@neodrag/svelte": "^2.0.3",
     "pixi.js": "^6.5.8",
     "uuid": "^9.0.0"
   }
