--- a/packages/annotorious-react/package.json
+++ b/packages/annotorious-react/package.json
@@ -37,5 +37,8 @@
     "openseadragon": "^3.1.0",
     "react": "16.8.0 || >=17.x",
     "react-dom": "16.8.0 || >=17.x"
+  },
+  "dependencies": {
+    "@neodrag/react": "^2.0.3"
   }
 }
