Added bulk delete feature to store, added keyboard command plumbing + delete feature

--- a/packages/annotorious-formats/tsconfig.json
+++ b/packages/annotorious-formats/tsconfig.json
@@ -14,7 +14,9 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "outDir": "./dist",
-    "paths": { "@/*": ["src/*"] },
+    "paths": { 
+      "@annotorious/core": ["../annotorious-core/src"] 
+    },
     "resolveJsonModule": true,
     "skipLibCheck": false,
     "sourceMap": true,
