Package config tweak

--- a/packages/annotorious-openseadragon/package.json
+++ b/packages/annotorious-openseadragon/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview",
     "test": "echo 'Skipping tests in @annotorious/openseadragon package'"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/recogito/annotorious.git"
