Minor build tweak

--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "vite build",
