core build tweaks

--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -9,6 +9,13 @@
     "dist",
     "src"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/core.js",
+      "require": "./dist/core.umd.js"
+    }
+  },
+  "module": "./dist/core.js",
   "scripts": {
     "build": "vite build",
     "test": "vitest",
