Redesign: selection lifecycle now also retains mouse event info

--- a/packages/annotorious-core/package.json
+++ b/packages/annotorious-core/package.json
@@ -11,7 +11,7 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/core.js",
+      "import": "./src/index.ts",
       "require": "./dist/core.umd.js"
     }
   },
